fix: Dockerfile for building
Co-authored-by: ahmeds99 <ahmed99@live.com>
Co-authored-by: sigbbe <sigbjorn.berdal14@gmail.com>