@@ -1,5 +1,3 @@
 FROM navikt/java:17
 
-ENV JAVA_OPTS="-Xms512m -Xmx512m -XX:MaxPermSize=256m"
-
-COPY build/libs/*.jar ./
+COPY build/libs/bulk-backend-0.0.1.jar ./app.jar
